Make properties configurable for httpClient (#601)